# eomt-package

./: pyproject.toml
eomt/datasets/: ade20k_panoptic.py  ade20k_semantic.py  cityscapes_semantic.py  coco_instance.py  coco_panoptic.py
eomt/models/: eomt.py
eomt/training/: lightning_module.py  mask_classification_instance.py  mask_classification_panoptic.py  mask_classification_semantic.py
